fixed scroll-to bug when clicking on collapse/expand cluster

--- a/client/hcomp/subroute.css
+++ b/client/hcomp/subroute.css
@@ -260,6 +260,10 @@ Cluster elements
    /*display: inline;*/
 }
 
+.ideaCollapser {
+  cursor: pointer;
+}
+
 .del-cluster {
   float:right;
   cursor: pointer;
